erDiagram
    USER {
        id string PK
        email string UK
        name string
        passwordHash string
        role string
        isActive boolean
        approvalStatus string
        createdAt string
        updatedAt string
    }

    SESSION {
        id string PK
        token string UK
        userId string FK
        expiresAt string
        createdAt string
    }

    DOCUMENT {
        id string PK
        displayName string
        ragStoreName string
        sourceFiles string
        ownerId string FK
        createdAt string
        updatedAt string
    }

    CONVERSATION {
        id string PK
        userId string FK
        documentId string FK
        botId string FK
        title string
        createdAt string
        updatedAt string
    }

    MESSAGE {
        id string PK
        conversationId string FK
        userId string FK
        role string
        content string
        groundingChunks string
        createdAt string
    }

    BOT {
        id string PK
        name string
        prompt string
        ownerId string FK
        createdAt string
        updatedAt string
    }

    BOT_DOCUMENT {
        botId string FK
        documentId string FK
        createdAt string
    }

    DOCUMENT_SHARE {
        id string PK
        documentId string FK
        userId string FK
        createdAt string
    }

    UPLOAD_BATCH {
        id string PK
        userId string FK
        displayName string
        status string
        error string
        progressCurrent int
        progressTotal int
        progressMessage string
        progressFileName string
        uploadPartsTotal int
        uploadPartsReceived int
        documentId string FK
        createdAt string
        updatedAt string
    }

    UPLOAD_FILE {
        id string PK
        batchId string FK
        name string
        size int
        type string
        totalParts int
        receivedParts int
        status string
        assembledPath string
        createdAt string
        updatedAt string
    }

    USAGE_DAILY {
        id string PK
        userId string FK
        dateKey string
        chatCount int
        uploadBytes int
        createdAt string
        updatedAt string
    }

    SYSTEM_LOG {
        id string PK
        level string
        message string
        meta string
        userId string FK
        createdAt string
    }

    USER ||--o{ SESSION : has
    USER ||--o{ DOCUMENT : owns
    USER ||--o{ CONVERSATION : starts
    USER o|--o{ MESSAGE : sends
    USER ||--o{ BOT : owns
    USER ||--o{ UPLOAD_BATCH : uploads
    USER ||--o{ USAGE_DAILY : usage
    USER o|--o{ SYSTEM_LOG : actor

    DOCUMENT ||--o{ CONVERSATION : context
    BOT o|--o{ CONVERSATION : used_by

    CONVERSATION ||--o{ MESSAGE : has

    BOT ||--o{ BOT_DOCUMENT : links
    DOCUMENT ||--o{ BOT_DOCUMENT : linked

    DOCUMENT ||--o{ DOCUMENT_SHARE : shared_with
    USER ||--o{ DOCUMENT_SHARE : receives_share

    UPLOAD_BATCH ||--o{ UPLOAD_FILE : contains
    DOCUMENT o|--o{ UPLOAD_BATCH : result
